Fixed mobile horizontal scroll bug

--- a/src/components/home/About.css
+++ b/src/components/home/About.css
@@ -63,7 +63,6 @@
   justify-self: center;
   text-align: center;
 
-  margin: 0 80px;
   width: 100%;
 
   transform: skewY(8deg);
